Done the minor corrections on review section.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.53 2009/10/26 17:37:59 ith Exp $
+% $Id: dbi.tex,v 1.54 2009/10/27 19:01:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.53 2009/10/26 17:37:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.54 2009/10/27 19:01:36 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -954,8 +954,8 @@ next chapter.
 \label{sec:others-dbi}
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-We have seen how the standard DBI model appears to be in conflict with
-observations. Many attempts have been made to modify the original scenario in
+We have found that the standard DBI model appears to be in conflict with
+observations. Many attempts have since been made to modify the original scenario in
 order to evade these bounds. These can be classified mainly according to
 whether they involve single or multiple fields. 
 
@@ -968,36 +968,36 @@ This leads to a change in the relationship
 between $\rho$ and $\vp$ from that defined in Section~\ref{sec:dbiinflation}
 \cite{Kobayashi:2007hm, Becker:2007ui, Ward:2007gs}.  
 For example, Becker \etal \cite{Becker:2007ui} 
-have proposed a model where inflation is driven by a ${\rm D5}$-brane. 
+have proposed a model where inflation is driven by a warped ${\rm D5}$-brane. 
 In this case, the range of allowed values for the inflaton 
 becomes independent of the throat charge, $N$, which weakens the upper bound on 
-the tensor-scalar ratio to $r \lsim 0.04$. Strictly speaking this is 
-only true for the ${\rm D7}$-brane case, since the
-wrapped ${\rm D5}$-brane imposes 
-$\Delta \varphi \sim N^{-1/4}$.
-However in arriving at this bound, it was assumed that the 
+the tensor-scalar ratio to $r \lsim 0.04$. (Strictly speaking there is a weak
+dependence on the charge since
+$\Delta \varphi \sim N^{-1/4}$.)
+However, in arriving at this bound, it was assumed that 
 backreaction effects of any fluxes in the throat were 
 negligible. 
 Kobayashi \etal \cite{Kobayashi:2007hm} 
 considered both ${\rm D5}$- and
-${\rm D7}$-brane models, but concluded that the former case
+${\rm D7}$ wrapped brane models, but concluded that the former case
 required an excessively large background charge in 
 order to relax the bounds on $r$. Whilst this is highly constraining, it is
-still much better than the case for single ${\rm D3}$-branes which require a
+still much better than the single brane scenario, which
+requires a
 much higher background charge and therefore are effectively ruled
 out as a predictive model. 
-Thus wrapped brane configurations are preferable to
-single brane models but the parameter space of these models is still severly
-limited by WMAP5 \cite{Alabidi:2008ej}. 
+Thus, wrapped brane configurations are preferable to
+single brane models but the parameter space of the former is still severly
+limited by the WMAP5 observations \cite{Alabidi:2008ej}. 
 % However
 % the difficulty in these models is that the backreaction is no longer under
 % control. 
 
-Another interesting proposal is warped Wilson line DBI. Instead of the position
-of the brane being used as the inflaton, moduli fields associated with Wilson
-lines are turned on and
-take the role instead \cite{Avgoustidis:2008zu}. This scenario is T-dual to the
-standard DBI model with non-parallel branes. Instead of the upper bound on $r$
+Another interesting proposal is warped Wilson line DBI. In this scenario, moduli
+fields associated with Wilson
+lines play the role of the inflaton \cite{Avgoustidis:2008zu}. This scenario is
+T-dual to the
+standard DBI model with non-parallel branes. The upper bound on $r$
 in \eq{eq:upperbound} a similar analysis in this case leads to a second
 consistent lower bound. Thus there is no conflict as long as enough tensor
 modes are produced that both lower bounds are met. 
@@ -1008,19 +1008,21 @@ field ranges can be achieved. These lead to possibly observable tensor modes
 \cite{Silverstein:2008sg}. 
 
 
-The warped throat is six-dimensional so it is natural to consider the case when
-the D3-brane is not fixed on the radial trajectory and this is done in
+The warped throat is six-dimensional, so it is natural to consider the case where
+the D3-brane is not restricted to a radial trajectory. This was investigated in
 Refs.~\cite{spinflation} and \cite{Huang:2007hh}. Increasing the degrees of
-freedom introduces the possibility of entropy mode production. There is a
+freedom in this way introduces the possibility of entropy mode production. There is a
 change in the predictions for the amount and type of non-Gaussianity produced
 and the constraints on $r$ can be eased \cite{Arroja:2008yy, Langlois:2009ej,
-Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}. Differences in
+Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}. 
+% 
+Differences in
 the bi- and tri-spectra could enable multi-field DBI models to be distinguished
 from single field ones. In particular multi-field DBI models
 have a unique tri-spectrum term with amplitude proportional to $\fnlloc\fnleq$
 \cite{RenauxPetel:2009sj}. This opens the possibility of a distinct
 observational signature for this type of model.
-
+% 
 Other multi-field models introduce copies of the single DBI action with either
 the same or different sound speeds \cite{Cai:2008if, Cai:2009hw},  use
 different throat geometries \cite{Gmeiner:2007uw},
