--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.55 2009/10/27 17:11:52 ith Exp $
+% $Id: multibrane.tex,v 1.56 2009/10/28 15:01:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.55 2009/10/27 17:11:52 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.56 2009/10/28 15:01:17 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -811,7 +811,7 @@ in Refs.~\cite{thomasward} and \cite{Ward:2007gs}.
 It was shown in \Rref{hltw} that the functional forms of the kinetic function, $P$, and
 corresponding energy density, $E$, for all the solutions with $n>2$
 can be derived recursively from the $n=2$ solution. We will use the notation
-$P_n$ and $E_n$ to denote the non-singlet sector of the kinetic and energy density for
+$P_n$ and $E_n$ to denote the non-singlet sector of the kinetic function and energy density for
 the $n$-brane solutions. The full pressure and energy densities are then 
 given by $P = P_n - nT_3(V-h^4)$ and $E = E_n + nT_3 (V-h^4)$, respectively. Using
 \eq{eq:str-even-multi} and the expressions
