--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.37 2009/10/29 11:16:52 ith Exp $
+% $Id: thesis.tex,v 1.38 2009/10/29 12:36:34 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.37 2009/10/29 11:16:52 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.38 2009/10/29 12:36:34 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -97,7 +97,7 @@ theend
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Part II: Numerical simulations
-\part{Numerical simulations of the evolution of second order perturbations}
+\part{Numerical simulations of the evolution of second order +perturbations}
 \label{part:numerical}
 \include{numerical/perts}
 \include{numerical/numerical}
