Moved to using iec command for i.e.,

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.54 2009/10/26 17:28:01 ith Exp $
+% $Id: dbi-intro.tex,v 1.55 2009/10/29 12:36:56 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.54 2009/10/26 17:28:01 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.55 2009/10/29 12:36:56 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -769,7 +769,7 @@ field is given approximately by \cite{lyth,bmpaper}
 \end{equation}
 % 
 This equality links the total variation of the inflaton during observable inflation
-with the tensor-scalar ratio, \ie, the amplitude of gravitational waves produced
+with the tensor-scalar ratio, \iec the amplitude of gravitational waves produced
 during that period. In Chapter~\ref{ch:dbi} we will show how the dynamics of the
 DBI scenario allow an upper limit to be imposed on $r$ using this relation.
 
