--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.54 2009/10/27 19:01:36 ith Exp $
+% $Id: dbi.tex,v 1.55 2009/10/29 12:36:56 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.54 2009/10/27 19:01:36 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.55 2009/10/29 12:36:56 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -438,7 +438,7 @@ throat was considered, where the warped brane tension asymptotes to a
 constant value. In this regime, \eq{eq:obscon1} reduces to 
 the condition $r \simeq 2.3 (1-n_s)/\sqrt{-\fnleq}$ when $|\fnleq|$ is 
 sufficiently large to be detectable by Planck, 
-\ie, $|\fnleq| > 5$. 
+\iec $|\fnleq| > 5$. 
 It then follows from the  
 WMAP5 best-fit value $n_s \simeq 0.968$ and lower limit 
 $\fnleq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
@@ -454,7 +454,7 @@ More generally, in UV DBI inflation where the brane moves towards the
 tip of the throat, it is reasonable to assume 
 that the warp factor decreases monotonically 
 with the radial coordinate over the observable range of inflaton values, 
-\ie, $dh/d \rho \ge 0$. This condition is satisfied for  
+\iec $dh/d \rho \ge 0$. This condition is satisfied for  
 $AdS_5 \times X_5$ compactifications and KS-type solutions. 
 Consequently, the third term in 
 \eq{eq:obscon1} will be semi-negative definite, 
