--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.23 2009/10/21 11:50:42 ith Exp $
+% $Id: ihmacros.sty,v 1.24 2009/10/29 12:36:56 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -12,6 +12,7 @@
 \newcommand{\etal}{\emph{et al.\ }}
 \newcommand{\eg}{e.g.\ }
 \newcommand{\ie}{i.e.\ }
+\newcommand{\iec}{i.e.,\ }
 
 % Maths letters
 \renewcommand{\H}{\ensuremath{\mathcal{H}}}
